--- a/Step2_persistant_volume_creation.html
+++ b/Step2_persistant_volume_creation.html
@@ -213,7 +213,7 @@
   <![endif]-->
 </head>
 <body>
-<section id="example-1-persistent-volume-creation" class="cell markdown" id="e17d86e8-3aaa-47a1-9eac-210d78a95f56">
+<section id="Persistent volume creation" class="cell markdown" id="e17d86e8-3aaa-47a1-9eac-210d78a95f56">
 <h1>Example 1: Persistent volume creation</h1>
 <p>This notebook will guide you step wise step to create persitent volume</p>
 </section>
