--- a/Step2_persistant_volume_creation.html
+++ b/Step2_persistant_volume_creation.html
@@ -213,8 +213,8 @@
   <![endif]-->
 </head>
 <body>
-<section id="Persistent volume creation" class="cell markdown" id="e17d86e8-3aaa-47a1-9eac-210d78a95f56">
-<h1>Example 1: Persistent volume creation</h1>
+<section id="example-1-persistent-volume-creation" class="cell markdown" id="e17d86e8-3aaa-47a1-9eac-210d78a95f56">
+<h1>Persistent volume creation</h1>
 <p>This notebook will guide you step wise step to create persitent volume</p>
 </section>
 <div class="cell markdown" id="79b8c310-ffd9-4fd1-b67a-2ae85b41ddfe">
